--- a/index.html
+++ b/index.html
@@ -17,22 +17,30 @@
                         <h3>Skin</h3>
                     </div>
                     <hr>
-                    <div class="mt-3 d-flex justify-content-evenly">
-                        <button class="btn btn-outline-success"><i class='bx bxs-t-shirt'></i></button>
-                        <button class="btn btn-outline-secondary"><i class='bx bxs-face'></i></button>
+                    <div class="mt-3 d-flex justify-content-between">
+                        <button id="btnWhite" class="btn btn-outline-success w-50 mx-1">
+                           Claro ⚪
+                        </button>
+                        <button id="btnBlack" class="btn btn-outline-secondary  w-50">
+                           Escuro 🟤
+                        </button>
                     </div>
                     <div class="mt-3">
-                        <label for="cpSleeve">Manga da Camiseta</label>
-                        <input type="color" class="form-control" name="cpSleeve" id="cpSleeve">
+                        <label for="cpShoes">Calçado</label>
+                        <input type="color" class="form-control" name="cpShoes" id="cpShoes">
                     </div>
                     <div class="mt-3">
                         <label for="cpShirt">Camiseta</label>
                         <input type="color" class="form-control" name="cpShirt" id="cpShirt">
                     </div>
+                    <div class="mt-3">
+                        <label for="cpHair">Cabelo</label>
+                        <input type="color" class="form-control" name="cpHair" id="cpHair">
+                    </div>
                 </div>
                 <div class="col-10 d-flex align-items-center justify-content-center">
                     <div>
-                        <object id="svgObject" data="assets/shirt.svg" type="image/svg+xml"></object>
+                        <object id="svgObject" data="assets/perentino.svg" type="image/svg+xml"></object>
                     </div>
                 </div>               
             </div>
