Refatoração do Script

--- a/index.html
+++ b/index.html
@@ -19,28 +19,29 @@
                     <hr>
                     <div class="mt-3 d-flex justify-content-between">
                         <button id="btnWhite" class="btn btn-outline-success w-50 mx-1">
-                           Claro ⚪
+                           Claro &nbsp;&nbsp;⚪
                         </button>
                         <button id="btnBlack" class="btn btn-outline-secondary  w-50">
                            Escuro 🟤
                         </button>
                     </div>
                     <div class="mt-3">
-                        <label for="cpShoes">Calçado</label>
-                        <input type="color" class="form-control" name="cpShoes" id="cpShoes">
+                        <label for="cor-1">Detalhe</label>
+                        <input type="color" class="form-control" name="cor-1" id="cor-1">
                     </div>
                     <div class="mt-3">
-                        <label for="cpShirt">Camiseta</label>
-                        <input type="color" class="form-control" name="cpShirt" id="cpShirt">
+                        <label for="cor-2">Sombra</label>
+                        <input type="color" class="form-control" name="cor-2" id="cor-2">
                     </div>
                     <div class="mt-3">
-                        <label for="cpHair">Cabelo</label>
-                        <input type="color" class="form-control" name="cpHair" id="cpHair">
+                        <label for="cor-3">Pano</label>
+                        <input type="color" class="form-control" name="cor-3" id="cor-3">
                     </div>
                 </div>
                 <div class="col-10 d-flex align-items-center justify-content-center">
                     <div>
-                        <object id="svgObject" data="assets/perentino.svg" type="image/svg+xml"></object>
+                        <!-- Alterar para a imagem à ser utilizada -->
+                        <object id="svgObject" data="assets/mochila.svg" type="image/svg+xml"></object>
                     </div>
                 </div>               
             </div>
